unpackaged/main/default/objects/CampaignMember/fields/Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Link__c</fullName>
    <formula>if( ISBLANK( ContactId ),&#39;&#39;, HYPERLINK( Account_ID__c , CompanyOrAccount ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Link</label>
    <type>Text</type>
</CustomField>