unpackaged/main/default/objects/CampaignMember/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>IF( TEXT(Contact.Account.Type) != &#39;&#39;, TEXT(Contact.Account.Type), &quot;Lead&quot;)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>