unpackaged/main/default/objects/CampaignMember/fields/IsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUser__c</fullName>
    <formula>IF(Contact.OwnerId =  $User.Id || Lead.OwnerId = $User.Id || Contact.Account.VAS_Sales_Rep__r.Id = $User.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCurrentUser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>