unpackaged/main/default/objects/CampaignMember/fields/Member_Created_Associated_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_Created_Associated_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Created/Associated Date</label>
    <type>Date</type>
</CustomField>