unpackaged/main/default/objects/CampaignMember/fields/MQL_after_Campaign_Membership__c.field-meta.xml
<CustomField>
    <fullName>MQL_after_Campaign_Membership__c</fullName>
    <description>Used in report type: Campaigns with Campaign Members with Lookups for Lead/Contact to help  report on MQLs</description>
    <formula>IF (ISBLANK( Contact.First_MQL_Date__c ), 
			 IF( NOT( ISBLANK( Lead.First_MQL_Date__c )), 
						 IF( CreatedDate &gt; Lead.First_MQL_Date__c, TRUE, FALSE ), 
							FALSE
				   ), 								
				IF( CreatedDate &gt; Contact.First_MQL_Date__c, TRUE, FALSE )
		 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Campaign Member&#39;s Contact First MQL Date is null, then if their Lead First MQL Date is not null. If the Campaign Member Created Date &gt; Lead First MQL Date, TRUE, otherwise FALSE. If the Contact First MQL Date is not null and &lt;  Campaign Member Created Date, TRUE, otherwise False.</inlineHelpText>
    <label>MQL after Campaign Membership</label>
    <type>Checkbox</type>
</CustomField>