unpackaged/main/default/objects/CampaignMember/fields/X1_Hour_Before_Creation__c.field-meta.xml
<CustomField>
    <fullName>X1_Hour_Before_Creation__c</fullName>
    <description>Created by R163669</description>
    <formula>CreatedDate - 0.04097222222222</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1 Hour Before Creation</label>
    <type>DateTime</type>
</CustomField>